# PlatformAI-HUB

./: .coverage  .dockerignore  .env  .env.voice_v2.example  .gitignore  ARCHITECTURE_NOTES.md  COMPLETE_VOICE_SERVICES_FIX_REPORT.md  Dockerfile.manager  Dockerfile.runner  FINAL_TESTING_REPORT.md  FINAL_VOICE_AUTOMATION_REPORT.md  FINAL_VOICE_IMPLEMENTATION_REPORT.md  MINIO_UPLOAD_FIX_REPORT.md  Makefile  OLD_agent.py  README.md  REDIS_TTS_FIXES_REPORT.md  REFACTORING_COMPLETION_REPORT.md  REFACTORING_REPORT.md  TODO_IMAGE_PROCESSING.md  TODO_VOICE_IMPLEMENTATION.md  VOICE_FINAL_REPORT.md  VOICE_IMPLEMENTATION_REPORT.md  VOICE_IMPROVEMENTS_REPORT.md  VOICE_SERVICES_FIXES_REPORT.md  VOICE_TESTING_AUTOMATION_GUIDE.md  WHATSAPP_INTEGRATION_REPORT.md  YANDEX_API_FIX_REPORT.md  YANDEX_TTS_FINAL_FIX_REPORT.md  agent.py  airsoft_agent_with_voice.json  analyze_audio.py  bot.py  config.py  debug_yandex_call.py  decisions.py  docker-compose.yml  entrypoint.sh  fix_final.py  fix_logging.py  (+57 more)
.github/: copilot-instructions.md
MANUAL/: VOICE_API_REFERENCE.md  VOICE_ARCHITECTURE_DOCUMENTATION.md  VOICE_FRONTEND_GUIDE.md  VOICE_README.md
MD/: 10_voice_v2_optimization_detailed_plan.md  11_voice_v2_optimization_checklist.md  14_voice_v2_detailed_file_inventory.md  15_voice_v2_usage_patterns_analysis.md  16_voice_v2_critical_paths_analysis.md  18_voice_v2_import_statements_mapping.md  19_voice_v2_deletion_risks_analysis.md  1_voice_integration_analysis.md  20_voice_v2_validation_strategy.md  21_voice_v2_deletion_prioritization_matrix.md  24_voice_v2_detailed_roadmap.md  25_voice_v2_stakeholder_alignment.md  26_voice_v2_phase_1_final_documentation.md  27_voice_v2_code_duplication_analysis.md  27_voice_v2_integration_testing_report.md  28_voice_v2_performance_baseline_report.md  28_voice_v2_phase_1_deduplication_completion_report.md  29_voice_v2_code_style_optimization_report.md  30_voice_v2_documentation_optimization_report.md  31_voice_v2_import_optimization_report.md  32_voice_v2_performance_security_report.md  33_langgraph_audio_url_persistence_fix.md  34_whatsapp_voice_text_duplication_fix.md  35_telegram_voice_v2_integration_fix.md  36_process_manager_refactoring_checklist.md  37_process_manager_quality_analysis_report.md  38_phase_5_completion_report.md  3_image_processing_implementation_plan.md  4_e2e_tests_refactoring.md  5_langgraph_solid_refactoring_plan.md  6_image_processing_testing_complete.md  8_voice_v2_mermaid_flowchart.md  9_voice_v2_unused_code_analysis.md  FIX_telegram_audio_url_persistence.md  IMAGE_VISION_MODE_DOCUMENTATION.md  Phase_1_1_2_core_functionality_analysis.md  Phase_1_1_4_architecture_patterns.md  Phase_1_2_4_langgraph_integration.md  Phase_2_1_report.md  Phase_2_2_3_completion_report.md  (+43 more)
agent_manager/: alembic.ini  config.py  crud.py  db.py  history_saver.py  main.py  models.py  process_manager.py  redis_client.py
agent_runner/: database.py  db.py  graph_factory.py  graph_factory2.py  graph_factory_orig.py  models.py  models2.py  runner.py  runner_orig.py  tools.py  tools2.py
alembic/: env.py  script.py.mako
app/: __init__.py  main.py
docker-PAI/: docker-compose.all.yml  docker-compose.build.yml  docker-compose.deps.yml  docker.env
docs/: CONFIGURATION_UPDATE_REPORT.md  HEADERS_FIX_REPORT.md  sse_integration.md
examples/: 2_langgraph_agentic_rag_qdrant copy 2.ipynb  langgraph_adaptie_rag.ipynb  langgraph_agentic_rag_qdrant.ipynb  langgraph_self_rag_qdrant copy.ipynb  langgraph_self_rag_qdrant.ipynb  test.ipynb
(+479 files in other folders)
