[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "fastembed>=0.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.9",
    "langchain-qdrant>=0.2.0",
    "langchainhub>=0.1.21",
    "langgraph>=0.3.14",
    "minio>=7.2.15",
    "numpy>=2.2.4",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pymupdf>=1.25.4",
    "pypdf>=5.4.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.13.3",
    "tavily-python>=0.5.1",
    "tiktoken>=0.9.0",
]
