[project]
name = "platformai-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.3",
    "chatgpt-md-converter>=0.2.0",
    "chromadb>=0.6.3",
    "cloudscraper>=1.2.71",
    "fastapi>=0.111.1",
    "fastembed>=0.6.0",
    "google-cloud-speech>=2.28.0",
    "google-cloud-texttospeech>=2.18.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.9",
    "langchain-qdrant>=0.2.0",
    "langchainhub>=0.1.21",
    "langgraph>=0.3.14",
    "minio>=7.2.15",
    "numpy>=2.2.4",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pydub>=0.25.1",
    "pymupdf>=1.25.4",
    "pypdf>=5.4.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-socketio>=5.11.4",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "qdrant-client>=1.13.3",
    "redis>=5.0.7",
    "requests>=2.32.4",
    "requests-html>=0.10.0",
    "sqlalchemy[asyncio]>=2.0",
    "tavily-python>=0.5.1",
    "tiktoken>=0.9.0",
    "uvicorn[standard]>=0.30.3",
    "yandexcloud>=0.311.0",
    "yandex-speechkit>=0.3.0",
    "google-cloud-vision>=3.10.2",
    "anthropic>=0.57.1",
    "pillow>=11.1.0",
    "aiohttp>=3.12.0",
    # Security fixes for CVEs
    "h11>=0.16.0",
    "jupyter-core>=5.8.1",
    "protobuf>=5.29.5",
    "tornado>=6.5",
    "psutil>=7.0.0",
    "urllib3>=2.5.0",
]

[tool.uv.sources]
# Optional: Specify package sources if needed
# Example:
# my-private-repo = { url = "https://my-private-repo.example.com/simple" }

[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # Look in the root directory
include = ["hub*"]  # Include only these packages and their submodules
#exclude = ["last_bot*", "temp_files*", "temp_files_qdrant*"] # Explicitly exclude others if needed

# Optional: Configure linters/formatters like Ruff
# [tool.ruff]
# line-length = 88
# select = ["E", "F", "W", "I"] # Example rule selection

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pydub.*",
    "ignore::DeprecationWarning:audioop.*",
    "ignore::DeprecationWarning:aiohttp.*",
    "ignore:enable_cleanup_closed is deprecated.*:DeprecationWarning",
    "ignore:.*audioop.*deprecated.*:DeprecationWarning"
]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short"
]
